# SUMAC

./: .gitignore  LICENSE  README.md  SUMAC_cost tables_artifact.ods
openmls/openmls/: Cargo.toml
openmls/openmls/src/: lib.rs  prelude.rs
openmls/openmls/src/ciphersuite/: aead.rs  mod.rs  secret.rs
openmls/openmls/src/messages/: mod.rs
openmls/openmls/src/tree_sumac/: diff.rs  error.rs  mod.rs  treekem.rs
openmls/openmls/src/tree_sumac/nodes/: mod.rs  (+4 more)
openmls/openmls/src/treesync/: mod.rs  node.rs
openmls/traits/src/: types.rs
sumac_rs/: Cargo.toml  README.md  export_latex.py
sumac_rs/benches/: bench_cgka.rs  bench_sumac.rs
sumac_rs/src/: errors.rs  key_package.rs  lib.rs  test_utils.rs  user.rs
sumac_rs/src/cgka/: mod.rs
sumac_rs/src/crypto/: hpke.rs  mod.rs  secret.rs  types.rs
sumac_rs/src/sumac/: mod.rs  regeneration.rs
sumac_rs/src/sumac/sumac_operations/: add_admin.rs  add_user.rs  mod.rs  op_admin.rs  op_user.rs  remove_admin.rs  remove_user.rs  update_user.rs
sumac_rs/src/tmka/: admin_group.rs  mod.rs  tests.rs  user_group.rs
sumac_rs/tables/: table_cgka_add_user_cgka.tex  table_cgka_remove_user_cgka.tex  table_cgka_update_user_cgka.tex  table_sumac_add-admin_sumac.tex  table_sumac_add-user_sumac.tex  table_sumac_remove-user_sumac.tex  table_sumac_update-user_sumac.tex
sumac_rs/tables_paper/: table_cgka_add-user.tex  table_cgka_remove-user.tex  table_cgka_update-user.tex  table_sumac_add-admin.tex  table_sumac_add-user.tex  table_sumac_remove-admin.tex  table_sumac_remove-user.tex  table_sumac_update-admin.tex  table_sumac_update-user.tex
(+6 files in other folders)
