[package]
edition = "2021"
name = "sumac_rs"
version = "0.1.0"

[dependencies]
serde = {version = "1.0.219", features = ["derive"]}
thiserror = "2.0.12"
tls_codec = {version = "0.4.1", features = ["derive", "serde", "mls"]}

criterion = "0.5.1"
either = "1.15.0"
fmt = "0.1.0"
log = "0.4.27"
openmls = {path = "../openmls/openmls", features = ["crypto-debug", "sumac"]}
openmls_basic_credential = {path = "../openmls/basic_credential", features = ["clonable"]}
openmls_rust_crypto = {path = "../openmls/openmls_rust_crypto"}
openmls_traits = {version = "0.4.0", path = "../openmls/traits"}
rand = "0.9.2"

[features]
test-utils = []

[[bench]]
harness = false
name = "bench_cgka"

[[bench]]
harness = false
name = "bench_sumac"
